Changes Notification DAO and controller